--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,12 @@
 @layer base {
   html {
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
   }
   
   body {
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
   }
 }
 
